# glitch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.py
configs/: __dataset.yaml  __hcnn.yaml  _dataset.yaml  dataset.yaml  dataset_large_context.yaml  dataset_long_horizon.yaml  hcnn.yaml  hcnn_context.yaml
src/: main.py
src/glitch/: __init__.py  common.py  dataloader.py  dynamics.py  nn.py  plotting.py  utils.py
src/glitch/configuration/: random.py
src/glitch/definitions/: constraints.py  dynamics.py  preferences.py
test/: __init__.py  test_dynamics.py
test/debug/: __init__.py  dataset.py
